--- a/misha.html
+++ b/misha.html
@@ -28,7 +28,107 @@
         </nav>
     </header>
 
+    <section class="section container">
+        <h1 class="main__text">
+            Колективізація в СРСР
+        </h1>
+        <p class="main__info">
+
+            Колективіза́ція сільського господарства в СРСР — створення великих колективних господарств на основі селянських дворів. Передбачалося, що результатом колективізації стане ріст виробництва сільськогосподарської продукції на 150 %. Колективізація мала охопити майже всі селянські господарства, ліквідувавши «шкідливий буржуазний вплив» приватної власності.
+            <br>
+            <br>
+            <img src="img/Kolektyvizatsiya/220px-Вышибем_кулаков_из_колхозов_1930.jpg" alt="" class="main__img">          
+            <br>
+            <br>
+            <b class="main__text" style="font-size: 1.5em;">
+                Мета колективізації:
+            </b>
+            <br>
+            <br>
+            Метою було перетворення всієї робочої сили сіл, а також міст, на робітників державних підприємств. Це давало змогу встановити повний економічний контроль влади над громадянами, поширити її політичне панування на економічно самостійне до цього селянство, тобто на практиці реалізувати ідею диктатури влади над усією країною, де селяни складали більш ніж 85 % населення. Було відомо, що реалізація плану зустріне певний опір, особливо з боку селян, яких мали позбавити землі
+            <br>
+            <br>
+            <img src="img/Kolektyvizatsiya/Kolektyvizatsiya.jpg" alt="" class="main__img">
+            <br>
+            <br>
+            Найрадикальніше колективізація відбувалася у сільській місцевості, де вона була війною режиму проти селянства. Історики називають колективізацію однією з причин Голодомору 1932—1933 років в Україні.
+            <br>
+            <br>
+            Шлях суспільства до соціалізму більшовики пов'язували із переведенням селянства на рейки великого виробництва. Ідея соціалістичного перетворення сільського господарства пройшла досить тривалу еволюцію. У 1917—1920 рр. виникли перші колгоспи. Це було результатом об'єднання селянських господарств за активного сприяння радянської влади.
+            <br>
+            <br>
+            <b class="main__text" style="font-size: 1.5em;">
+                Засоби колективізації:
+            </b>
+            <br>
+            <br>
+            Основними засобами колективізації населення були:
+            <br>
+            <br>
+            • «Революція згори»: силовий тиск та залякування селян;
+            <br>
+            <br>
+            • примусова організація колгоспів;
+            <br>
+            <br>
+            • ліквідація заможних господарів (розкуркулення);
+            <br>
+            <br>
+            • заборона залишати село (по суті повернення до панщини)
+            <br>
+            <br>
+            <b>Колгосп </b> – колективне господарство; форма колективного господарства, що набула поширення в СРСР після проведення колективізації. Землі, реманент, техніка колгоспу з формальної точки зору були власністю тих, хто його утворив. У власності селян залишалася лише присадибна ділянка, птиця, дрібна худоба, корови.
+            <br>
+            <br>
+            <img src="img/Kolektyvizatsiya/завантаження.jpg" alt="" class="main__img">
+            <br>
+            <br>
+            <b>Куркуль (куркульство)</b> – поширена назва заможних селян, господарів в Україні. Ярлик, який радянська влада навішувала противникам колгоспного будівництва на селі. Передбачалося знищити як класового ворога. Офіційна ідеологія зображувала  куркулів як лютих ворогів радянської влади, жорстоких експлуататорів. 
+            <br>
+            <br>
+            <b>Розкуркулення</b> – кампанія експропріації селянських господарств у 1930-ті рр., складова частина примусової колективізації. Здійснювалася на основі постанови ЦК ВКП(б) від 30 січня 1930 р. «Про заходи у справі куркульських господарств у районах суцільної колективізації». Формально спрямована проти найзаможніших селян (в Україні їх було 1,5 %). Поряд із примусовою колективізацією розкуркулення стало передумовою занепаду сільського господарства й голодомору.
+            <br>
+            <br>
+            <img src="img/Kolektyvizatsiya/570503_1_w_570.jpg" alt="" class="main__img">
+            <br>
+            <br>
+            <b class="main__text" style="font-size: 1.5em;">
+                Наслідки колективізації:
+            </b>
+            <br>
+            <br>
+            • Держава отримала хліб і вже не залежала від індивідуальних господарств.
+            <br>
+            <br>
+            • Держава отримала засоби для індустріалізації
+            <br>
+            <br>
+            • Завершилося одержавлення економіки
+            <br>
+            <br>
+            • Збереглося присадибне господарство, як підмога селянству
+            <br>
+            <br>
+            • Занепад індивідуального сільського господарства 
+            <br>
+            <br>
+            • Відчуження засобів праці та її результатів від самого виробника
+            <br>
+            <br>
+            • Голодомор 1932-33рр.
+            <br>
+            <br>
+            • Формування історично нової системи господарювання, що заснована на примусовій праці, прикріпленні до колгоспу (радгоспу), натуральній платі оплати.
+            <br>
+            <br>
+            • Село втратило третину робочої сили
+
+        </p>
+    </section>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
+
